objects/Sync_Setting__mdt.object
<CustomObject><fields>
        <fullName>Error_Email_Addresses__c</fullName>
        <description>Email addresses to send errors to. Separated through comma.</description>
        <inlineHelpText>Email addresses to send errors to. Separated through comma.</inlineHelpText>
        <label>Error Email Addresses</label>
        <required>true</required>
        <type>TextArea</type>
    </fields><fields>
        <fullName>SQL_Connection_Password__c</fullName>
        <label>SQL Connection Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>SQL_Connection_Username__c</fullName>
        <label>SQL Connection Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>SQL_Server_Database__c</fullName>
        <label>SQL Server Database</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><label>Sync Setting</label><pluralLabel>Sync_Settings</pluralLabel><visibility>Public</visibility></CustomObject>